--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "coverage": "vitest run --coverage"
   },
   "devDependencies": {
+    "@types/dedent": "^0.7.0",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
     "vitest": "^0.16.0"
+  },
+  "dependencies": {
+    "dedent": "^0.7.0"
   }
 }
